syntax = "proto3";

// Brought in from scalapb-runtime
import "scalapb/scalapb.proto";

package com.evernym.verity.protocol.protocols.agentprovisioning.v_0_7;

message SetRoster {
    int32 requesterIdx = 1;
    int32 provisionerIdx = 2;
}

message TokenDetails {
    string sponseeId = 1;
    string sponsorId = 2;
    string nonce = 3;
    string timestamp = 4;
    string sig = 5;
    string sponsorVerKey = 6;
}

message RequesterKeysOpt {
    string did = 1;
    string verKey = 2;
}
message RequestedAgentCreation {
    option (scalapb.message).extends = "AgentProvisionEvt";
    SetRoster setter = 1;
    RequesterKeysOpt keys = 2;
    TokenDetails tokenDetails = 3;
}

message RequestedEdgeAgentCreation {
    option (scalapb.message).extends = "AgentProvisionEvt";
    SetRoster setter = 1;
    string requesterVk = 2;
    TokenDetails tokenDetails = 3;
}

message AskedForProvisioning {
    option (scalapb.message).extends = "AgentProvisionEvt";
}

message AgentProvisioned {
    option (scalapb.message).extends = "AgentProvisionEvt";
    string selfDID = 1;
    string agentVerKey = 2;
}

message ProvisionFailed {
    option (scalapb.message).extends = "AgentProvisionEvt";
    string err = 1;
}