syntax = "proto3";

// Brought in from scalapb-runtime
import "scalapb/scalapb.proto";

package com.evernym.verity.protocol.protocols.walletBackup;

message WalletBackupInitParam {
    string name = 1;
    string value = 2;
}

message WalletBackupInitialized {
    option (scalapb.message).extends = "BackupEvt";
    repeated WalletBackupInitParam parameters = 1;
}

message SetRoster {
    int32 exporterIdx = 1;
    int32 persisterIdx = 2;
    string recovererVk = 3;
}

message ProvisionRequested {
    option (scalapb.message).extends = "BackupEvt";
    SetRoster setter = 1;
}

message RequestedRecoveryKeySetup {
    option (scalapb.message).extends = "BackupEvt";
    SetRoster setter = 1;
}

message RecoveryRequested {
    option (scalapb.message).extends = "BackupEvt";
    SetRoster setter = 1;
}

message ReadyToPersist {
    option (scalapb.message).extends = "BackupEvt";
}

message ReadyToExport {
    option (scalapb.message).extends = "BackupEvt";
}

message BackupInProgress {
    option (scalapb.message).extends = "BackupEvt";
}

message BackupStored {
    option (scalapb.message).extends = "BackupEvt";
    bytes wallet = 1;
}

message BackupStoredInBlob {
    option (scalapb.message).extends = "BackupEvt";
    string blobAddress = 1;
}

message BackupStoredAck {
    option (scalapb.message).extends = "BackupEvt";
}

message RecoveryInProgress {
    option (scalapb.message).extends = "BackupEvt";
}

message RecoveredBackup {
    option (scalapb.message).extends = "BackupEvt";
}

